--- a/wwwroot/css/zofya_loginpage_style.css
+++ b/wwwroot/css/zofya_loginpage_style.css
@@ -2,7 +2,20 @@
 .container-login{
     padding-top: 10%;
     padding-bottom: 10%;
-    width: 40%;
+    width: 45%;
+}
+
+@media (max-width: 596px) {
+    .container-login{        
+        width: 60%;
+    }
+}
+
+@media (max-width: 447px) {
+    .container-login{      
+        padding-top: 15%;  
+        width: 80%;
+    }
 }
 
 .container-login .nav-link{
@@ -18,12 +31,36 @@
     color: #4f4f4f!important;
 }
 
-.form-login .form-outline{
-    margin-bottom: 10%;
+@media (min-width: 320px) {
+
+    .form-register .form-outline,
+    .form-login .form-outline {
+        margin-bottom: 18%;
+    }
 }
 
-.form-register .form-outline{
-    margin-bottom: 7%;
+@media (min-width: 447px) {
+
+    .form-register .form-outline,
+    .form-login .form-outline {
+        margin-bottom: 16%;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .form-register .form-outline,
+    .form-login .form-outline {
+        margin-bottom: 10%;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .form-register .form-outline,
+    .form-login .form-outline {
+        margin-bottom: 8%;
+    }
 }
 
 .container-login .nav-item .active,
