--- a/wwwroot/css/zofya_loginpage_style.css
+++ b/wwwroot/css/zofya_loginpage_style.css
@@ -84,7 +84,8 @@
 }
 
 #button-close-modal-terms,
-#button-close-modal-correctmessage{
+#button-close-modal-correctmessage,
+#button-close-modal-errors{
     background-color: transparent!important;
 }
 
