--- a/Views/Home/LogIn.cshtml
+++ b/Views/Home/LogIn.cshtml
@@ -1,4 +1,4 @@
-
+@model ZofyaMVC.Models.Customer
 @{
     Layout = "_ZofyaLayout";
     ViewData["Title"] = "Zofya";
@@ -14,12 +14,12 @@
         <!-- Pills navs -->
         <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
             <li class="nav-item" role="presentation">
-                <a class="nav-link active tab-login-style" id="tab-login" data-mdb-toggle="pill" href="#pills-login" role="tab"
-                    aria-controls="pills-login" aria-selected="true">Login</a>
+                <a class="nav-link active tab-login-style" id="tab-login" data-mdb-toggle="pill" href="#pills-login"
+                    role="tab" aria-controls="pills-login" aria-selected="true">Login</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a class="nav-link tab-login-style" id="tab-register" data-mdb-toggle="pill" href="#pills-register" role="tab"
-                    aria-controls="pills-register" aria-selected="false">Register</a>
+                <a class="nav-link tab-login-style" id="tab-register" data-mdb-toggle="pill" href="#pills-register"
+                    role="tab" aria-controls="pills-register" aria-selected="false">Sign In</a>
             </li>
         </ul>
         <!-- Pills navs -->
@@ -27,39 +27,42 @@
         <!-- Pills content -->
         <div class="tab-content">
             <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-                <form class="needs-validation form-login" id="form-login" novalidate>
+
+                <form asp-action="LogInForm" method="post">
+
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="text-center mb-3">
-                        <h3 class="brand-zofya brand-zofya-logo">Sign in</h3>
+                        <h3 class="brand-zofya brand-zofya-logo">Login</h3>
                     </div>
 
-                    <!-- Email input -->
-                    <div class="form-outline">
-                        <input type="email" id="validationCustom-login-email" class="form-control" required />
-                        <label class="form-label" for="validationCustom-login-email">Email</label>
-                        <div class="invalid-feedback">Invalid email.</div>
+                    <h6 id="errorAlert">@ViewBag.InvalidCredentials</h6>
+
+
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email</label>
+                        <input type="email" class="form-control" asp-for="Email">
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-
-                    <!-- Password input -->
-                    <div class="form-outline mb-5">
-                        <input type="password" id="validationCustom-login-password" class="form-control" required />
-                        <label class="form-label" for="validationCustom-login-password">Password</label>
-                        <div class="invalid-feedback">Invalid password.</div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" asp-for="Password">
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-
-                    <!-- Submit button -->
-                    <button id="button-logIn" type="submit" onclick="signIn(); return false;"
-                        class="btn btn-primary btn-block mb-4">Sign In</button>
-
-                    <!-- Register buttons -->
+                    
+                    <button id="button-logIn" type="submit" class="btn btn-primary btn-block mb-4 login-gap"
+                        onclick="disableLoginButton();">Login</button>
                     <div class="text-center">
                         <p>Not a member? <a id="register-link" href="#">Register</a></p>
                     </div>
+
+
+
                 </form>
             </div>
             <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
                 <form class="needs-validation form-register" id="form-register" novalidate>
                     <div class="text-center mb-3">
-                        <h3 class="brand-zofya brand-zofya-logo">Register</h3>
+                        <h3 class="brand-zofya brand-zofya-logo">Sign In</h3>
                     </div>
 
                     <!-- Name input -->
@@ -70,10 +73,10 @@
                     </div>
 
                     <!-- Username input -->
-                    <div class="form-outline phone-field">                        
+                    <div class="form-outline phone-field">
                         <input type="text" id="validationCustom-register-phone" class="form-control" />
                         <label class="form-label" for="validationCustom-register-phone">Phone</label>
-                        <div id="invalidPhone" class="invalid-feedback"></div>                        
+                        <div id="invalidPhone" class="invalid-feedback"></div>
                     </div>
 
                     <!-- Email input -->
@@ -97,38 +100,40 @@
                         <div id="invalidRePassword" class="invalid-feedback"></div>
                     </div>
 
-                    <!-- Checkbox -->                    
+                    <!-- Checkbox -->
 
                     <div class="form-check d-flex justify-content-center" id="checkboxContainer">
                         <div class="row">
                             <div class="column">
                                 <input class="form-check-input me-2" type="checkbox" id="registerCheck"
                                     aria-describedby="registerCheckHelpText" data-mdb-toggle="modal"
-                                    data-mdb-target="#modalTerms" onclick="checkedTerms();"/>
+                                    data-mdb-target="#modalTerms" onclick="checkedTerms();" />
                                 <label id="check-label" class="form-check-label" for="registerCheck">
                                     I have read and agree to the zofya terms
                                 </label>
                             </div>
-                        </div>                                                
+                        </div>
                     </div>
 
                     <div id="alertSpace"></div>
 
                     <!-- Submit button -->
                     <button id="button-addCustomer" type="submit" onclick="addCustomer(); return false;"
-                        class="btn btn-primary btn-block mb-3">Register</button>
+                        class="btn btn-primary btn-block mb-3">Sign In</button>
 
                     <div class="text-center">
-                        <a href="#" id="termsLink" data-mdb-toggle="modal" data-mdb-target="#modalTerms">Terms and conditions</a>
+                        <a href="#" id="termsLink" data-mdb-toggle="modal" data-mdb-target="#modalTerms">Terms and
+                            conditions</a>
                     </div>
 
-                    <div class="modal fade" id="modalTerms" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="modalTerms" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Terms and Conditions</h5>
-                                    <button id="button-close-modal-terms" type="button" class="btn-close" data-mdb-dismiss="modal"
-                                        aria-label="Close"></button>
+                                    <button id="button-close-modal-terms" type="button" class="btn-close"
+                                        data-mdb-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -140,53 +145,56 @@
                                     3. Fuga molestiae voluptas voluptatibus inventore, architecto ab!
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-secondary"
+                                        data-mdb-dismiss="modal">Close</button>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="modal fade" id="modalCorrectMessage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="modalCorrectMessage" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Success</h5>
-                                    <button id="button-close-modal-correctmessage" type="button" class="btn-close" data-mdb-dismiss="modal"
-                                        aria-label="Close"></button>
+                                    <button id="button-close-modal-correctmessage" type="button" class="btn-close"
+                                        data-mdb-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body text-center">
-                                    <i class="fa-regular fa-circle-check fa-3x" style="color:green"></i>                                    
+                                    <i class="fa-regular fa-circle-check fa-3x" style="color:green"></i>
                                     <br>
                                     <br>
                                     The account has been successfully registered
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal" onclick="reloadView();">Close</button>
+                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal"
+                                        onclick="reloadView();">Close</button>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="modal fade" id="modalErrors" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="modalErrors" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Errors</h5>
-                                    <button id="button-close-modal-errors" type="button" class="btn-close" data-mdb-dismiss="modal"
-                                        aria-label="Close" onclick="hideModalErrors();"></button>
+                                    <button id="button-close-modal-errors" type="button" class="btn-close"
+                                        data-mdb-dismiss="modal" aria-label="Close"
+                                        onclick="hideModalErrors();"></button>
                                 </div>
-                                <div class="modal-body">                                   
+                                <div class="modal-body">
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal" onclick="hideModalErrors();">Close</button>
+                                    <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal"
+                                        onclick="hideModalErrors();">Close</button>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
 
-
-                    
                 </form>
             </div>
         </div>
@@ -195,5 +203,5 @@
 </main>
 
 @section Scripts {
-    <script src="/js/login.js"></script>
+<script src="/js/login.js"></script>
 }
