Controllers services update

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/zofya_mainpage_style.css"/>
+    <link rel="stylesheet" href="~/css/Home/zofya_mainpage_style.css"/>
 
 }
 
@@ -148,5 +148,5 @@
 </section>
 
 @section Scripts {
-    <script src="/js/index.js"></script>
+    <script src="/js/Home/index.js"></script>
 }
