--- a/Views/Shared/_ZofyaManagementLayout.cshtml
+++ b/Views/Shared/_ZofyaManagementLayout.cshtml
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="~/css/zofya_style.css" />
+    <link rel="stylesheet" href="~/css/Home/zofya_style.css" />
 
     @await RenderSectionAsync("Styles", required: false)
 
@@ -91,7 +91,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/zofyaLayout.js"></script>
+    <script src="/js/Home/zofyaLayout.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
